Fixed installer, everything works now along with .ppf filetype associations now